<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ai.sangmado.gbserver</groupId>
    <artifactId>gbserver-parent</artifactId>
    <packaging>pom</packaging>
    <version>1795.0-SNAPSHOT</version>
    <name>gbserver</name>
    <description>A netty server to bootstrap a specific gbcodec.</description>

    <modules>
        <module>netty-server-common</module>
        <module>netty-server-jt808</module>
        <module>netty-server-jt809</module>
        <module>netty-server-jt808-application</module>
        <module>netty-server-jt809-application</module>
    </modules>

    <properties>

        <!--build-->
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.finalName>${project.artifactId}-${project.version}</project.build.finalName>
        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>

        <!--dependencies-->
        <lombok.version>1.18.8</lombok.version>
        <guava.version>28.1-jre</guava.version>
        <netty.version>4.1.51.Final</netty.version>
        <slf4j.version>1.7.30</slf4j.version>
        <logback.version>1.2.3</logback.version>
        <jackson.version>2.10.1</jackson.version>

        <!--gbprotocol-->
        <gbprotocol.version>1378.1-SNAPSHOT</gbprotocol.version>

        <!--gbcodec-->
        <gbcodec.version>1523.0-SNAPSHOT</gbcodec.version>

        <!--test-->
        <junit.version>5.6.0</junit.version>
        <mockito.version>3.2.4</mockito.version>

        <!--plugins-->
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>

    </properties>

    <dependencyManagement>
        <dependencies>

            <!--lombok-->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <!--gbcommon-->
            <dependency>
                <groupId>ai.sangmado.gbprotocol</groupId>
                <artifactId>gbcommon</artifactId>
                <version>${gbprotocol.version}</version>
            </dependency>

            <!--jt808-->
            <dependency>
                <groupId>ai.sangmado.gbprotocol</groupId>
                <artifactId>jt808</artifactId>
                <version>${gbprotocol.version}</version>
            </dependency>

            <!--jt809-->
            <dependency>
                <groupId>ai.sangmado.gbprotocol</groupId>
                <artifactId>jt809</artifactId>
                <version>${gbprotocol.version}</version>
            </dependency>

            <!--jt1078-->
            <dependency>
                <groupId>ai.sangmado.gbprotocol</groupId>
                <artifactId>jt1078</artifactId>
                <version>${gbprotocol.version}</version>
            </dependency>

            <!--netty-codec-jt808-->
            <dependency>
                <groupId>ai.sangmado.gbcodec</groupId>
                <artifactId>netty-codec-jt808</artifactId>
                <version>${gbcodec.version}</version>
            </dependency>

            <!--netty-codec-jt809-->
            <dependency>
                <groupId>ai.sangmado.gbcodec</groupId>
                <artifactId>netty-codec-jt809</artifactId>
                <version>${gbcodec.version}</version>
            </dependency>

            <!--netty-server-common-->
            <dependency>
                <groupId>ai.sangmado.gbserver</groupId>
                <artifactId>netty-server-common</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!--netty-server-jt808-->
            <dependency>
                <groupId>ai.sangmado.gbserver</groupId>
                <artifactId>netty-server-jt808</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!--netty-server-jt809-->
            <dependency>
                <groupId>ai.sangmado.gbserver</groupId>
                <artifactId>netty-server-jt809</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!--guava-->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <!--netty-->
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-common</artifactId>
                <version>${netty.version}</version>
            </dependency>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-buffer</artifactId>
                <version>${netty.version}</version>
            </dependency>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-handler</artifactId>
                <version>${netty.version}</version>
            </dependency>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-codec</artifactId>
                <version>${netty.version}</version>
            </dependency>

            <!--jackson-->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jdk8</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.module</groupId>
                <artifactId>jackson-module-parameter-names</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-cbor</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!--logging-->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <!--junit-->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven-dependency-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>